--- a/docker.service
+++ b/docker.service
@@ -6,7 +6,7 @@ After=network-online.target firewalld.service containerd.service
 Wants=network-online.target
 Requires=docker.socket
 
-[Service]
+[Service-1]
 Type=notify
 # the default is not to use systemd for cgroups because the delegate issues still
 # exists and systemd currently does not support the cgroup feature set required
